# basler_recipe_example

./: CMakeLists.txt  OutputObserver.h  RecipeSample.cpp  ResultData.h
cmake/: FindpylonDataProcessing.cmake
